# simplegl

./: .gitignore  CMakeLists.txt  simplegl.cpp
vstudio/: BasicGL.sln  BasicGL.vcxproj  BasicGL.vcxproj.filters
